gcc-7 (7.5.0-4) UNRELEASED; urgency=medium

  * 

 -- Matthias Klose <doko@debian.org>  Tue, 03 Dec 2019 18:57:47 +0100

gcc-7 (7.5.0-3) unstable; urgency=medium

  * Rebuild for isl soname change.

 -- Matthias Klose <doko@debian.org>  Mon, 02 Dec 2019 12:39:03 +0100

gcc-7 (7.5.0-2) unstable; urgency=medium

  * Stop building -dbg packages, keep building the libstc++6-7-dbg package
    containing just the libstdc++ debug build.

 -- Matthias Klose <doko@debian.org>  Thu, 28 Nov 2019 11:08:55 +0100

gcc-7 (7.5.0-1) unstable; urgency=medium

  * GCC 7.5.0 release.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Thu, 14 Nov 2019 10:01:51 +0100

gcc-7 (7.4.0-15) unstable; urgency=medium

  * GCC 7.5.0 release candidate 1.
  * Update to SVN 20191105 (r277823) from the gcc-7-branch.
    - Fix PR target/91275 (PPC), PR libstdc++/92143, PR target/88167 (ARM),
      PR debug/91887, PR tree-optimization/91812, PR tree-optimization/92131,
      PR target/86040 (AVR), PR rtl-optimization/89721, PR target/89400 (ARM),
      PR target/88630 (SH), PR ada/91995, PR fortran/86248, PR fortran/69455.

 -- Matthias Klose <doko@debian.org>  Tue, 05 Nov 2019 14:04:40 +0100

gcc-7 (7.4.0-14) unstable; urgency=medium

  * Update to SVN 20191002 (r276439) from the gcc-7-branch.
    - Fix PR fortran/91557, PR target/86712 (SH), PR target/88562 (SH),
      PR target/82920 (Darwin), PR target/82920 (x86), PR target/80672 (SH),
      PR target/85993 (SH), PR rtl-optimization/88751, PR fortran/91557.
  * Bump standards version.

 -- Matthias Klose <doko@debian.org>  Wed, 02 Oct 2019 07:48:40 +0200

gcc-7 (7.4.0-13) unstable; urgency=medium

  * Update to SVN 20190912 (r275684) from the gcc-7-branch.
    - Fix PR rtl-optimization/89795, PR fortran/91686.
  * Upload without binary packages after the accidential gcc-7-source
    removal from the archive.

 -- Matthias Klose <doko@debian.org>  Thu, 12 Sep 2019 13:33:19 +0200

gcc-7 (7.4.0-12) unstable; urgency=medium
