@@ -2,15 +2,15 @@
 
 --- a/src/gcc/gcc.c
 +++ b/src/gcc/gcc.c
-@@ -2533,6 +2533,7 @@ for_each_path (const struct path_prefix
+@@ -2686,6 +2686,7 @@ for_each_path (const struct path_prefix
  	{
  	  len = paths->max_len + extra_space + 1;
  	  len += MAX (MAX (suffix_len, multi_os_dir_len), multiarch_len);
-+	  len += multiarch_len + 2; /* triplet prefix for as, ld.  */
++	  len += strlen (DEFAULT_REAL_TARGET_MACHINE) + 2; /* triplet prefix for as, ld.  */
  	  path = XNEWVEC (char, len);
  	}
  
-@@ -2746,6 +2747,24 @@ file_at_path (char *path, void *data)
+@@ -2899,6 +2900,24 @@ file_at_path (char *path, void *data)
    struct file_at_path_info *info = (struct file_at_path_info *) data;
    size_t len = strlen (path);
  
