@@ -1,6 +1,7 @@
 gcc-7 (7.5.0-4) UNRELEASED; urgency=medium
 
-  * 
+ * Fix buffer overflow in the gcc-search-prefixed-as-ld patch.
+   Addresses: #946792.
 
  -- Matthias Klose <doko@debian.org>  Tue, 03 Dec 2019 18:57:47 +0100
 
